# bevy_seedling

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustweek.md
.github/: FUNDING.yml
.github/workflows/: checks.yaml  ircam-pr.yaml  web-audio-pr.yaml
benches/: basic.rs
crates/firewheel-ircam-hrtf/: CHANGELOG.md  Cargo.toml
crates/firewheel-ircam-hrtf/src/: lib.rs
crates/firewheel-web-audio/: Cargo.toml
crates/firewheel-web-audio/src/: backend.rs  wasm_processor.rs
examples/: activity.rs  animation.rs  buses_and_pools.rs  bypassing.rs  crossfade.rs  custom_node.rs  formants.rs  input_processing.rs  itd.rs  loop_region.rs  loudness.rs  music_sfx_pools.rs  one_shot.rs  pausing_samples.rs  pool_cleanup.rs  precise_scheduling.rs  priority.rs  randomized_speed.rs  reverb_tails.rs  sample_lifecycle.rs  sample_speed.rs  seamless.rs  select_output.rs  selecting_outputs.rs  sends.rs  settings_menu.rs  spatial_audio.rs  spatial_basic.rs  spatial_hrtf.rs  spatial_itd.rs  toggle_spatial_effects.rs
seedling_macros/: Cargo.toml
seedling_macros/src/: lib.rs
src/: adsr.rs  auto_mix.rs  bpf.rs  configuration.rs  diagnostics.rs  entity_set.rs  error.rs  lib.rs  lpf.rs  node.rs  profiling.rs  saw.rs  spatial.rs  startup.rs  time.rs  timeline.rs
src/context/: graph.rs  mod.rs  os.rs  seedling_context.rs  storage_local.rs  storage_thread.rs  web.rs
src/edge/: connect.rs  disconnect.rs  mod.rs
src/node/: events.rs  follower.rs  label.rs  mod.rs
src/nodes/: bpf.rs  envelopes.rs  limiter.rs  loudness.rs  lpf.rs  mod.rs  send.rs
src/nodes/feedback/: feed_in.rs  mod.rs
src/nodes/freeverb/: delay_line.rs  mod.rs
src/nodes/itd/: delay_line.rs  mod.rs
src/platform/: cpal.rs  mock.rs  mod.rs  rtaudio.rs  web_audio.rs
src/pool/: dynamic.rs  label.rs  mod.rs  queue.rs  sample_effects.rs
src/sample/: assets.rs  decoder.rs  mod.rs  pool.rs
src/utils/: entity_set.rs  fixed_vec.rs  mod.rs  profiling.rs  timeline.rs
