[package]
name = "bevy_seedling"
version = "0.5.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["Corvus Prudens <corvusprudens@gmail.com>"]
description = "A sprouting integration of the Firewheel audio engine"
readme = "README.md"
repository = "https://github.com/corvusprudens/bevy_seedling"
documentation = "https://docs.rs/bevy_seedling"
keywords = ["gamedev", "audio", "bevy", "firewheel"]
categories = ["game-development", "multimedia::audio"]
exclude = ["/assets"]

[features]
default = ["stream", "wav", "ogg", "rand", "loudness", "reflect"]
stream = ["firewheel/stream_nodes"]
rand = ["dep:rand"]
loudness = ["dep:ebur128", "dep:portable-atomic"]
reflect = ["firewheel/bevy_reflect"]

# formats
wav = ["symphonium/wav", "symphonium/pcm"]
ogg = ["symphonium/ogg", "symphonium/vorbis"]
flac = ["symphonium/flac"]
mkv = ["symphonium/mkv"]

# codecs
mp3 = ["symphonium/mp3"]
adpcm = ["symphonium/adpcm"]

# Enables profiling and testing backend compilation.
# This is mainly intended for internal use.
profiling = []

[dependencies]
bevy_ecs = "0.16"
bevy_app = "0.16"
bevy_math = { version = "0.16", default-features = false, features = ["curve"] }
bevy_asset = "0.16"
bevy_transform = "0.16"
bevy_log = "0.16"
bevy_platform = "0.16"
bevy_time = "0.16"
bevy_reflect = { version = "0.16", default-features = false, features = [
  "glam",
] }

firewheel = { version = "0.6.1-beta", features = [
  "bevy",
  "spatial_basic_node",
  "scheduled_events",
  "musical_transport",
] }
symphonium = { version = "0.6", default-features = false, features = [
  "opt-simd",
  "fft-resampler",
] }
symphonia = "0.5"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.13"
bevy_seedling_macros = { path = "./seedling_macros", version = "0.4.0" }
rand = { version = "0.8", default-features = false, features = [
  "small_rng",
  "getrandom",
], optional = true }
ebur128 = { version = "0.1.10", optional = true }
portable-atomic = { version = "1.11", optional = true, features = ["float"] }
bevy_keyframe = { git = "https://github.com/corvusprudens/bevy_keyframe", features = [
  "firewheel",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
firewheel = { version = "0.6.1-beta", features = ["wasm-bindgen"] }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_debug_stepping",
  "bevy_asset",
  "bevy_state",
  "multi_threaded",
  "sysinfo_plugin",
  "std",
  "bevy_log",
  # for examples with ui
  "bevy_text",
  "default_font",
  "bevy_ui",
  "bevy_picking",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_render",
  "wayland",
  "x11",
] }
criterion = { version = "0.5", default-features = false, features = [
  "plotters",
  "cargo_bench_support",
] }

[[bench]]
name = "basic"
harness = false
required-features = ["profiling"]
