[package]
name = "bevy_seedling"
version = "0.8.0"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
authors = ["Corvus Prudens <corvusprudens@gmail.com>"]
description = "A sprouting integration of the Firewheel audio engine"
readme = "README.md"
repository = "https://github.com/corvusprudens/bevy_seedling"
documentation = "https://docs.rs/bevy_seedling"
keywords = ["gamedev", "audio", "bevy", "firewheel"]
categories = ["game-development", "multimedia::audio"]
exclude = ["/assets"]

[features]
default = ["wav", "ogg", "rand", "reflect", "cpal", "diagnostics"]
resample_inputs = ["firewheel/cpal_resample_inputs"]
rand = ["dep:rand"]
reflect = ["firewheel/bevy_reflect", "firewheel-ircam-hrtf?/bevy_reflect"]
cpal = ["firewheel/cpal", "dep:cpal"]
web_audio = ["cpal/audioworklet"]
dev = ["entity_names", "track_location"]
entity_names = []
track_location = []
symphonia = [
  "dep:symphonia",
  "dep:symphonium",
  "firewheel/symphonium",
]
diagnostics = ["dep:bevy_diagnostic", "firewheel/node_profiling"]

# formats
wav = ["symphonia", "symphonium/wav", "symphonium/pcm"]
ogg = ["symphonia", "symphonium/ogg", "symphonium/vorbis"]
flac = ["symphonia", "symphonium/flac"]
mkv = ["symphonia", "symphonium/mkv"]

# codecs
mp3 = ["symphonia", "symphonium/mp3"]
adpcm = ["symphonia", "symphonium/adpcm"]

# nodes
hrtf = ["dep:firewheel-ircam-hrtf"]
# embed all HRTF subjects
hrtf_subjects = ["firewheel-ircam-hrtf?/all_subjects"]
loudness = ["dep:ebur128", "dep:portable-atomic"]
effects = ["firewheel/all_nodes"]

# Enables profiling and testing backend compilation.
# This is mainly intended for internal use.
profiling = ["dep:audioadapter-buffers"]

[dependencies]
bevy_ecs = { version = "0.18.0", default-features = false }
bevy_app = { version = "0.18.0", default-features = false }
bevy_math = { version = "0.18.0", default-features = false, features = [
  "curve",
  "std",
] }
bevy_asset = { version = "0.18.0", default-features = false }
bevy_transform = { version = "0.18.0", default-features = false, features = [
  "bevy-support",
] }
bevy_log = { version = "0.18.0", default-features = false }
bevy_platform = { version = "0.18.0", default-features = false, features = [
  "alloc",
] }
bevy_time = { version = "0.18.0", default-features = false }
bevy_reflect = { version = "0.18.0", default-features = false, features = [
  "glam",
] }
bevy_utils = { version = "0.18.0", default-features = false }
bevy_diagnostic = { version = "0.18.0", default-features = false, optional = true }

firewheel = { git = "https://github.com/BillyDM/Firewheel", rev = "f1e8219", default-features = false, features = [
  "bevy",
  "spatial_basic_node",
  "scheduled_events",
  "musical_transport",
  "glam-30",
  "freeverb_node",
  "sampler_node",
  "std",
  "tracing",
] }
symphonium = { version = "0.9", default-features = false, features = [
  "opt-simd",
  "fft-resampler",
  "resampler",
], optional = true }
symphonia = { version = "0.5", default-features = false, optional = true }
smallvec = { version = "1.13", default-features = false }
bevy_seedling_macros = { path = "./seedling_macros", version = "0.7.0" }
rand = { version = "0.9", default-features = false, features = [
  "small_rng",
  "os_rng",
], optional = true }
ebur128 = { version = "0.1.10", optional = true }
portable-atomic = { version = "1.11", optional = true, features = ["float"] }
firewheel-ircam-hrtf = { version = "0.5.0", path = "crates/firewheel-ircam-hrtf", optional = true, features = [
  "bevy",
] }
cpal = { version = "0.17", default-features = false, optional = true }
audioadapter-buffers = { version = "3.0", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
firewheel = { git = "https://github.com/BillyDM/Firewheel", rev = "f1e8219", default-features = false, features = [
  "wasm-bindgen",
] }

[dev-dependencies]
bevy_seedling = { path = ".", features = ["hrtf", "loudness", "resample_inputs", "effects"] }
firewheel = { git = "https://github.com/BillyDM/Firewheel", rev = "f1e8219", default-features = false, features = [
  "fast_filter_nodes",
] }
bevy = { version = "0.18.0", default-features = false, features = [
  "2d_bevy_render",
  "default_app",
  "picking",
  "ui_bevy_render",
  "bevy_winit",
  "default_font",
  "std",
  "sysinfo_plugin",
  "wayland",
  "webgl2",
  "x11",
] }
criterion = { version = "0.5", default-features = false, features = [
  "plotters",
  "cargo_bench_support",
] }
audioadapter-buffers = { version = "3.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }

[[bench]]
name = "basic"
harness = false
required-features = ["profiling"]

[package.metadata.docs.rs]
all-features = true
